objects/Five9__Five9OnlinePresenceStatus__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Online Presence Status which is considered by Five9 for Omni-Channel sync</description>
    <fields>
        <fullName>Five9__Is_Default_Online_Presence_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default Online Presence Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Five9__Is_Deleted_Online_Presence_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted Online Presence Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Five9__Is_Selected_Online_Presence_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Selected Online Presence Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Five9__Online_Not_Ready_Reason_Code_Name__c</fullName>
        <label>Not Ready Reason Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Online_Presence_Status_Id__c</fullName>
        <label>Online Presence Status Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Online_Presence_Status_Label__c</fullName>
        <label>Online Presence Status Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Owner_Id__c</fullName>
        <label>Owner Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Five9 Online Presence Status</label>
</CustomObject>